--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,7 +24,7 @@
          </servlet-class>
          <init-param>
              <param-name>javax.ws.rs.Application</param-name>
-             <param-value>restExample.RestEasyServices</param-value>
+             <param-value>restExample.RestEasyServices</param-value> <!-- classe che estende Application-->
          </init-param>
      </servlet>
      <servlet-mapping>
